--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,7 +9,7 @@
   <img src="../static/images/logo-upc1.png" th:src="@{/images/logo-upc1.png}" 
    width="750" height="160"/>
 </div>
-<h1 align="center">Inicie Sesion</h1><br/>
+<h1 align="center">Iniciar Sesion</h1><br/>
 <p style="color:red" align="center" th:text="${message}"></p>
 <form th:action="@{/login}" method="post">
 <div class="container">
