--- a/src/main/resources/templates/editarMatricula.html
+++ b/src/main/resources/templates/editarMatricula.html
@@ -4,7 +4,7 @@
 <title>Editar Matricula</title>
   <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 </head>
-<body>
+<body background="images/fondo.png">
 <div class="container">
 <!--/*/ <th:block th:include="fragments/header2 :: header"></th:block> /*/-->
 <div class="col-md-2"></div>
