--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 
 </head>
-<body background="../static/images/fondo.png">
+<body background="images/fondo.png">
 <div align="center">
   <img src="../static/images/logo-upc1.png" th:src="@{/images/logo-upc1.png}" 
    width="750" height="160"/>
