--- a/src/main/resources/templates/newDocente.html
+++ b/src/main/resources/templates/newDocente.html
@@ -23,7 +23,7 @@ return /\d/.test(String.fromCharCode(keynum));
 }
 </script>
 </head>
-<body>
+<body background="images/fondo.png">
 <div class="container">
 <div th:switch="${session.usuariologeado.cadmin}">
 <div th:case="null">ERROR</div>
@@ -32,6 +32,11 @@ return /\d/.test(String.fromCharCode(keynum));
 <div class="col-md-3"></div>
 <div class="col-md-6">
 <h1 align="center">Registro de Docente</h1>
+<h3 align="center" style="color:red" th:text="${messageerror}"></h3>
+<h3 align="center" style="color:red" th:text="${messageespacios}"></h3>
+<h3 align="center" style="color:green" th:text="${messageexito}"></h3>
+<h3 align="center" style="color:green" th:text="${messageregistro}"></h3>
+<h3 align="center" style="color:green" th:text="${messageeditado}"></h3>
 <div class="panel panel-info">
  <div class="panel-body">
 <p style="color:red" align="center" th:text="${message}"></p>
@@ -48,12 +53,13 @@ return /\d/.test(String.fromCharCode(keynum));
     </div>
     <div class="form-group">
     <label for="dni" >DNI: </label>
-    <input type="text"  class="form-control" id="dni" th:field="*{dni}" maxlength="8" onkeypress="return justNumbers(event);"/>
+    <input type="text"  class="form-control" id="dni" th:field="*{dni}" maxlength="8" onkeypress="return justNumbers(event);" autocomplete="off"/>
     <span style="color:red" th:if="${#fields.hasErrors('dni')}" th:errors="*{dni}">DNI no valido</span><br/><br/>
+    <p style="color:red" th:text="${messagedni}"></p>
     </div>
     <div class="form-group">
     <label for="fnacimiento" >Fecha de Nacimiento: </label>
-    <input type="date" class="form-control" id="fnacimiento" th:field="*{fnacimiento}" />
+    <input type="date" class="form-control" id="fnacimiento" max="1990-12-31" min="1950-01-01" th:field="*{fnacimiento}" />
     <span style="color:red" th:if="${#fields.hasErrors('fnacimiento')}" th:errors="*{fnacimiento}">Fecha no valida</span>
     </div>
     <div class="form-group">
@@ -90,7 +96,7 @@ return /\d/.test(String.fromCharCode(keynum));
     <td th:text="${d.fnacimiento}"></td>
     <td th:text="${d.descripcion}"></td>
     <td><a th:href="${'/editarDocente' + d.cdocente}" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-pencil"></span> Update</a></td>
-    <td><a th:href="${'/deletedocente'+d.cdocente}" class="btn btn-danger" role="button"><span class="glyphicon glyphicon-remove"></span> Delete</a></td>
+    <td><a href="#" class="btn btn-danger linkDelete" th:id="${d.cdocente}"><span class="glyphicon glyphicon-remove"></span> Delete</a></td>
     
     </tr>
   
@@ -98,8 +104,51 @@ return /\d/.test(String.fromCharCode(keynum));
   </tbody>
   
   </table>
+  <h3 style="color:red" th:text="${messagevacio}" align="center"></h3>
   </div>
   </div>
   </div>
+  <!-- Modal -->
+	<div id="modalDelete" class="modal fade" tabindex="-1" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"
+						aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h4 class="modal-title">Eliminar Docente</h4>
+				</div>
+				<div class="modal-body">
+					<p>¿Desea eliminar el docente seleccionado?</p>
+					<p style="color:red">Nota: si el docente esta en una seccion no se podra eliminar del sistema</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary" data-dismiss="modal">Cancelar</button>
+					<button id="btnDelete" class="btn btn-danger">
+						<i class="glyphicon glyphicon-remove-sign"></i> Eliminar
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- /.modal -->
+	<script type="text/javascript">
+		$(function() {
+
+			var idAlumno = null;
+
+			$('.linkDelete').on('click', function(e) {
+				e.preventDefault();
+				$('#modalDelete').modal();
+				idAlumno = $(this).attr('id');
+			});
+
+			$('#btnDelete').on('click', function() {
+				location.href = "/deletedocente" + idAlumno;
+			});
+
+		});
+	</script>
 </body>
 </html>
