--- a/src/main/resources/templates/editarAlumno.html
+++ b/src/main/resources/templates/editarAlumno.html
@@ -23,17 +23,24 @@ return /\d/.test(String.fromCharCode(keynum));
 }
 </script>
 </head>
-<body>
+<body background="images/fondo.png">
 <div class="container">
 <!--/*/ <th:block th:include="fragments/header2 :: header"></th:block> /*/-->
 <div class="col-md-3"></div>
 <div class="col-md-6">
 <h1 align="center">Editar Alumno</h1><br/>
+<h3 align="center" style="color:red" th:text="${messageerror}"></h3>
+<h3 align="center" style="color:green" th:text="${messageexito}"></h3>
+<h3 align="center" style="color:green" th:text="${messageregistro}"></h3>
+<h3 align="center" style="color:green" th:text="${messageeditado}"></h3>
 <div class="panel panel-info">
  <div class="panel-body">
-<form th:object="${alumno}" th:action="@{/alumno/new}" method="post">
+<form th:object="${alumno}" th:action="@{/alumno/update}" method="post">
 
 <input type="hidden" th:field="*{calumno}" />
+<input type="hidden" th:field="*{genero}" />
+<input type="hidden" th:field="*{fnacimientoalumno}" />
+<input type="hidden" th:field="*{dni}" />
  <div class="form-group">
   <label for="nombre" >Nombre: </label>
   <input type="text" class="form-control"  th:field="*{nombrealumno}" onkeypress="return validar(event)" />
@@ -59,11 +66,6 @@ return /\d/.test(String.fromCharCode(keynum));
 </select>
 </div>
 <div class="form-group">
- <label for="dni" >DNI: </label>
- <input id="dni" class="form-control"  type="text" th:field="*{dni}" maxlength="8" onkeypress="return justNumbers(event);"/>
- <span style="color:red" th:if="${#fields.hasErrors('dni')}" th:errors="*{dni}">DNI no valido</span>
-</div>
-<div class="form-group">
 <label for="colegio" >Colegio de procedencia:</label>
 <input id="colegio" class="form-control" type="text" th:field="*{colegio}"/>
 <span style="color:red" th:if="${#fields.hasErrors('colegio')}" th:errors="*{colegio}">Colegio no valido</span>
@@ -79,17 +81,6 @@ return /\d/.test(String.fromCharCode(keynum));
  <option value="Diseñador Grafico">Diseñador Grafico</option>
 </select>
 </div>
-<div class="form-group">
- <label for="fnacimientoalumno" >Fecha de Nacimiento: </label>
- <input id="fnacimientoalumno" class="form-control"  type="date" th:field="*{fnacimientoalumno}" />
- <span style="color:red" th:if="${#fields.hasErrors('fnacimientoalumno')}" th:errors="*{fnacimientoalumno}">Fecha no valida</span>
-</div>
-<div class="form-group">
-  <label>Sexo:</label>
-  <label class="radio-inline"><input type="radio" th:field="*{genero}"  name="sexo" value="Masculino"/> Masculino</label>
-  <label class="radio-inline"><input type="radio" th:field="*{genero}"  name="sexo" value="Femenino"/> Femenino</label>
-<span style="color:red" th:if="${#fields.hasErrors('genero')}" th:errors="*{genero}">Fecha no valida</span><br/><br/>
-</div>
  <div align="center">
 <button type="submit" class="btn btn-success"><span class="glyphicon glyphicon-pencil"></span> Guardar</button>
 </div>
@@ -99,8 +90,5 @@ return /\d/.test(String.fromCharCode(keynum));
 </div>
 <div class="col-md-3"></div>
 </div>
-<br/>
-<a th:href="@{/}">Regresar al Inicio</a><br/>
-<br/>
 </body>
 </html>
