--- a/src/main/resources/templates/editarSalon.html
+++ b/src/main/resources/templates/editarSalon.html
@@ -4,7 +4,7 @@
 <title>Editar Salon</title>
   <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 </head>
-<body>
+<body background="images/fondo.png">
 <div class="container">
 <!--/*/ <th:block th:include="fragments/header2 :: header"></th:block> /*/-->
 <div class="col-md-4"></div>
@@ -12,13 +12,13 @@
 <h1 align="center">Editar Salon</h1><br/>
 <div class="panel panel-info">
  <div class="panel-body">
-<form th:object="${salon}" th:action="@{/salon/new}" method="post">
+<form th:object="${salon}" th:action="@{/salon/update}" method="post">
 
 <input type="hidden" th:field="*{csalon}" />
 <div class="form-group">
 	<label for="nombre" >Numero: </label>
-	<input type="number" class="form-control" id="nombre" th:field="*{nombre}" min="100" max="999"></input> 
-	<span style="color:red" th:if="${#fields.hasErrors('nombre')}" th:errors="*{number}">Nombre no valido</span><br/><br/>
+	<input type="number" class="form-control" id="nombre" th:field="*{nombre}" min="100" max="999" onkeydown="return false"></input> 
+	<span style="color:red" th:if="${#fields.hasErrors('nombre')}" th:errors="*{nombre}">Nombre no valido</span><br/><br/>
     </div>
     <div class="form-group">
     <label for="descripcion" >Descripcion:</label>
