--- a/src/main/resources/templates/newHorario.html
+++ b/src/main/resources/templates/newHorario.html
@@ -4,7 +4,7 @@
 <title>Registro de Horarios</title>
  <!--/*/ <th:block th:include="fragments/headerinc :: head"></th:block> /*/-->
 </head>
-<body>
+<body background="images/fondo.png">
 <div class="container">
 <div th:switch="${session.usuariologeado.cadmin}">
 <div th:case="null">ERROR</div>
@@ -14,6 +14,9 @@
 <div class="col-md-2"></div>
 <div class="col-md-8">
 <h1 align="center">Registro de Horario</h1><br/>
+<h3 align="center" style="color:red" th:text="${messageerror}"></h3>
+<h3 align="center" style="color:green" th:text="${messageexito}"></h3>
+<h3 align="center" style="color:green" th:text="${messageregistro}"></h3>
 <div class="panel panel-info">
  <div class="panel-body">
  <form th:object="${horario}" th:action="@{/horario/new}" method="post">
@@ -71,12 +74,12 @@
     <span style="color:red" th:if="${#fields.hasErrors('dia')}" th:errors="*{dia}">Nombre no valido</span><br/><br/>
    <div class="form-group">
    <label>Hora de Inicio:</label>
-   <input type="number" class="form-control" th:field="*{horainicio}" min="7" max="22"></input>
+   <input type="number" class="form-control" th:field="*{horainicio}" min="7" max="22" value="7" onkeydown="return false"></input>
     <span style="color:red" th:if="${#fields.hasErrors('horainicio')}" th:errors="*{horainicio}">Nombre no valido</span><br/><br/>
     </div>
     <div class="form-group">
     <label>Hora de Termino: </label>
-   <input type="number" class="form-control" th:field="*{horafin}" min="8" max="23"></input>
+   <input type="number" class="form-control" th:field="*{horafin}" min="8" max="23" value="8"  onkeydown="return false"></input>
     <span style="color:red" th:if="${#fields.hasErrors('horafin')}" th:errors="*{horafin}">Nombre no valido</span><br/><br/>
     </div>
     <p style="color:red" th:text="${messagehorasnovalidas}"></p>
@@ -110,12 +113,54 @@
        <td th:text="${h.horainicio}"></td>
        <td th:text="${h.horafin}"></td>
        <td><a th:href="${'/editarHorario'+ h.chorario}" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-pencil"></span> Update</a></td>
-       <td><a th:href="${'/deleteHorario'+ h.chorario}" class="btn btn-danger" role="button"><span class="glyphicon glyphicon-remove"></span> Delete</a></td>
+       <td><a href="#" class="btn btn-danger linkDelete" th:id="${h.chorario}"><span class="glyphicon glyphicon-remove"></span> Delete</a></td>
      </tr>
    </tbody>
  </table>
  </div>
  </div>
  </div>
+ <!-- Modal -->
+	<div id="modalDelete" class="modal fade" tabindex="-1" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"
+						aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+					<h4 class="modal-title">Eliminar Horario</h4>
+				</div>
+				<div class="modal-body">
+					<p>¿Desea eliminar el horario seleccionado?</p>
+					<p style="color:red">Nota: si el horario esta siendo usado por otro registro no se podra eliminar del sistema</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary" data-dismiss="modal">Cancelar</button>
+					<button id="btnDelete" class="btn btn-danger">
+						<i class="glyphicon glyphicon-remove-sign"></i> Eliminar
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- /.modal -->
+	<script type="text/javascript">
+		$(function() {
+
+			var idAlumno = null;
+
+			$('.linkDelete').on('click', function(e) {
+				e.preventDefault();
+				$('#modalDelete').modal();
+				idAlumno = $(this).attr('id');
+			});
+
+			$('#btnDelete').on('click', function() {
+				location.href = "/deleteHorario" + idAlumno;
+			});
+
+		});
+	</script>
 </body>
 </html>
